Proyecto 1/api/Language.g4
grammar Language;

options { caseInsensitive = false; }

TRUE: 'true';
FALSE: 'false';
INT: [0-9]+;
FLOAT: [0-9]+'.'[0-9]+;
WS: [ \t\r\n]+ -> channel(HIDDEN);
CARACTER : '\'' . '\'' ; 
CADENA: '"' (ESC_SEQ | ~["\\\r\n])* '"' ; 
fragment ESC_SEQ: '\\' [btnr"\\];
ID: [a-zA-Z_][a-zA-Z0-9]*;


PIZQ: '(';
PDER: ')';
LLAVE_ABRE: '{';
LLAVE_CIERRA: '}';
CORCHETE_ABRE: '[';
CORCHETE_CIERRA: ']';

IGUAL: '=';
DOSPUNTOS_IGUAL: ':=';
MASIGUAL: '+=';
MENOSIGUAL: '-=';

LLINEAC: '//' ~[\r\n]* -> skip;
MULTILINEAC: '/*' .*? '*/' -> skip;


program: listainstrucciones* ;

listainstrucciones : variables |instruccion | classdcl | funcdlc ;

variables: 'var' ID tipo (IGUAL expr)?  #declaracionVar 
| ID DOSPUNTOS_IGUAL expr      #declaracionImplicita 
| 'var' ID '[]' tipo #declaracionSlicevacio
| ID DOSPUNTOS_IGUAL '[]' tipo '{' expr (','expr)* '}'  #declaracionSlice
| ID DOSPUNTOS_IGUAL '[][]' tipo '{' fila (',' fila)* ','? '}' #declaracionSlicemulti
;
fila: '{' expr (',' expr)* ','?'}' ;

classdcl : 'class' ID '{' classBody* '}' ;

classBody : variables | funcdlc ;

funcdlc: 'func' ID '(' params? ')' tipo? '{' listainstrucciones* '}' ;

params: param (',' param)* ;
param: ID tipo ; 


instruccion:  expr  #ExprecionInstruccion 
|'break' #BreakInstruccion
|'continue' #ContinueInstruccion
|'return' expr? #ReturnInstruccion
| print #PrintInstruccion
|	asignacion								# Assign
| '{' listainstrucciones* '}' #BloqueInstrucciones
| 'if'  expr  instruccion ('else' instruccion)? #IfInstruccion
| 'while' '(' expr ')' instruccion #WhileInstruccion
| 'switch'  expr  '{' cases* (defaultCase)? '}'  #SwitchInstruccion
| 'for' expr instruccion  #ForCondicion
| 'for' (asignacion | variables) ';' expr ';' expr instruccion #Forincicializacion
| 'for' ID ',' ID DOSPUNTOS_IGUAL 'range' ID instruccion #ForRange

;

cases:
    'case' expr ':' listainstrucciones*
    ;

defaultCase:
    'default' ':' listainstrucciones*  
    ;

expr:
	'(' expr ')'			# Parens
	| '!' right=expr #operadorNegacion
	|'-' expr                   	  # Negate
	| expr '.' ID '(' args? ')'             # ModuleFuncCall
	| expr call+  #Callee
	| expr op =  ('*' | '/') expr	# MulDiv
	| expr op = '%' expr	# Mod
	| expr  op = ('+' | '-') expr	# AddSub
	| expr	op = ('>' | '<' | '>=' | '<=' ) expr	# Relational
	| expr	op = ('==' | '!=') expr	# Equalitys
  | expr '[' expr ']' '[' expr ']'  #AccesoSliceMulti
	| expr '[' expr ']'  #AccesoSlice
	| expr	op = ('&&' | '||' ) expr	# Logicos
	| FLOAT					      # Float
	| INT					      # Int
	| 'new' ID '(' args? ')' #New
	| TRUE #boleanTrueExpresion
	| FALSE #boleanFalseExpresion
	| CARACTER #caracterExpresion
	| CADENA #cadenaExpresion
	| ID #Idexpresion
  | ID ('++' | '--') # IncrementoDecremento 


; 

//como a.b.c().f=
call: 
'(' args? ')' 	#FuncCall 
| '.' ID #Get;	

args: expr (',' expr)* ;

asignacion:	ID signo=(MASIGUAL | MENOSIGUAL) expr #incremento
					| ID '[' expr ']' IGUAL expr #asignarSlice
					| ID '[' expr ']' '[' expr ']' IGUAL expr  #AsignarSliceMulti
					| ID IGUAL '[]' tipo '{' expr (',' expr)* '}' #asignarSliceCompleto
					| expr IGUAL expr #asignarVar 
					;

print: 'fmt.Println' PIZQ impresiones PDER ;

impresiones: impresiones ',' expr
	| expr;

if: 'if'  expr  LLAVE_ABRE listainstrucciones LLAVE_CIERRA ('else' LLAVE_ABRE listainstrucciones LLAVE_CIERRA)? 
  | 'if'  expr  LLAVE_ABRE listainstrucciones LLAVE_CIERRA 'else' if;

tipo: 'int'
| 'float64'
| 'string'
| 'bool'
| 'rune'
;
